--- a/source/form.html
+++ b/source/form.html
@@ -101,30 +101,32 @@
           <div class="form__achievements-position">
             <fieldset class="form__achievements">
               <legend class="form__achievements-legend">Ваши безбашенные достижения в путешествии</legend>
-              <div>
-                <input class="form__achievements-input" type="checkbox" name="selfi" id="selfi" checked="checked">
-                <label class="form__achievements-label" for="selfi">Сделал селфи с акулой</label>
-              </div>
-              <div>
-                <input class="form__achievements-input" type="checkbox" name="burnt" id="burnt" checked="checked">
-                <label class="form__achievements-label" for="burnt">Обгорел на пляже</label>
-              </div>
-              <div>
-                <input class="form__achievements-input" type="checkbox" name="saw-chuck" id="saw-chuck">
-                <label class="form__achievements-label" for="saw-chuck">Видел Чака Норриса</label>
-              </div>
-              <div>
-                <input class="form__achievements-input" type="checkbox" name="bought-souvenirs" id="bought-souvenirs">
-                <label class="form__achievements-label" for="bought-souvenirs">Накупил сувениров</label>
-              </div>
-              <div>
-                <input class="form__achievements-input" type="checkbox" name="held-tower" id="held-tower"
-                  checked="checked">
-                <label class="form__achievements-label" for="held-tower">Удержал башню</label>
-              </div>
-              <div>
-                <input class="form__achievements-input" type="checkbox" name="destroyed-hotel" id="destroyed-hotel">
-                <label class="form__achievements-label" for="destroyed-hotel">Разгромил отель</label>
+              <div class="form__achievemnts-flex-box">
+                <div class="form__achievemnts-flex">
+                  <input class="form__achievements-input" type="checkbox" name="selfi" id="selfi" checked="checked">
+                  <label class="form__achievements-label" for="selfi">Сделал селфи с акулой</label>
+                </div>
+                <div class="form__achievemnts-flex">
+                  <input class="form__achievements-input" type="checkbox" name="burnt" id="burnt" checked="checked">
+                  <label class="form__achievements-label" for="burnt">Обгорел на пляже</label>
+                </div>
+                <div class="form__achievemnts-flex">
+                  <input class="form__achievements-input" type="checkbox" name="saw-chuck" id="saw-chuck">
+                  <label class="form__achievements-label" for="saw-chuck">Видел Чака Норриса</label>
+                </div>
+                <div class="form__achievemnts-flex">
+                  <input class="form__achievements-input" type="checkbox" name="bought-souvenirs" id="bought-souvenirs">
+                  <label class="form__achievements-label" for="bought-souvenirs">Накупил сувениров</label>
+                </div>
+                <div class="form__achievemnts-flex">
+                  <input class="form__achievements-input" type="checkbox" name="held-tower" id="held-tower"
+                    checked="checked">
+                  <label class="form__achievements-label" for="held-tower">Удержал башню</label>
+                </div>
+                <div class="form__achievemnts-flex">
+                  <input class="form__achievements-input" type="checkbox" name="destroyed-hotel" id="destroyed-hotel">
+                  <label class="form__achievements-label" for="destroyed-hotel">Разгромил отель</label>
+                </div>
               </div>
             </fieldset>
           </div>
@@ -169,13 +171,13 @@
             </fieldset>
           </div>
 
-            <div class="form__btn">
-              <button class="form__button" type="submit">Отправить форму</button>
-              <p class="main-form__comment"><span>*</span> &mdash; обязательные поля</p>
-            </div>
-            </div>
+          <div class="form__btn">
+            <button class="form__button" type="submit">Отправить форму</button>
+            <p class="main-form__comment"><span>*</span> &mdash; обязательные поля</p>
           </div>
-        </form>
+      </div>
+      </div>
+      </form>
       </div>
     </section>
   </main>
@@ -196,4 +198,5 @@
     </div>
   </footer>
 </body>
+
 </html>
