--- a/source/index.html
+++ b/source/index.html
@@ -81,13 +81,12 @@
             <li class="benefits__item">
               <img class="benefits__phone" src="img/back-mob-2.png" width="300" height="302">
               <h3 class="benefits__item-heading">Меняет мир вокруг</h3>
-              <p class="benefits__item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
-                усилить&nbsp;эффект</p>
+              <p class="benefits__item-text">Сделайте снимок и украсьте&nbsp;его смайликом или&nbsp;текстовой подписью, чтобы&nbsp;усилить&nbsp;эффект</p>
             </li>
             <li class="benefits__item">
               <img class="benefits__phone" src="img/back-mob-3.png" width="300" height="302">
               <h3 class="benefits__item-heading">Заводит новых&nbsp;друзей</h3>
-              <p class="benefits__item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
+              <p class="benefits__item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и&nbsp;заводите
                 новых</p>
             </li>
           </ul>
@@ -100,8 +99,8 @@
             <h2 class="fake-inform__heading">Эффект<br> на&nbsp;24&nbsp;часа!</h2>
             <p class="fake-inform__text">
               Британские ученые провели исследования
-              и&nbsp;доказали, что положительный эффект
-              от&nbsp;использования приложения длится целые сутки!
+              и&nbsp;доказали, что&nbsp;положительный эффект
+              от&nbsp;использования приложения длится&nbsp;целые сутки!
             </p>
             <a href="#" class="fake-inform__link">Узнать больше об исследовании</a>
           </div>
