--- a/source/form.html
+++ b/source/form.html
@@ -9,29 +9,6 @@
 </head>
 
 <body class="page__body">
-  <section class="send-popup">
-    <h2 class="send-popup__heading">Ваша заявка
-      отправлена</h2>
-    <p class="send-popup__text">Спасибо за ваше участие, ваша
-      заявка уже поступила к нам. В
-      ближайшее время мы рассмотрим
-      ее и оповестим вас.</p>
-    <div class="send-popup__wrapper">
-      <button class="send-popup__btn" type="button">Закрыть окно</button>
-    </div>
-  </section>
-
-  <section class="oops-popup">
-    <h2 class="oops-popup__heading">
-      Что-то пошло не так!
-    </h2>
-    <p class="oops-popup__text">Проверьте поля, выделенные красным,
-      скорее всего вы забыли их заполнить
-    </p>
-    <div class="oops-popup__wrapper">
-      <button type="button" class="oops-popup__btn">Ок</button>
-    </div>
-  </section>
   <header class="page-header-form">
     <nav class="page-header-form__nav">
       <ul class="page-header-form__list">
@@ -92,7 +69,8 @@
 
         <div class="form__achievements-position">
           <fieldset class="form__achievements">
-            <legend class="form__achievements-legend">Ваши безбашенные достижения в путешествии</legend>
+            <legend class="visually-hidden">Ваши безбашенные достижения в путешествии</legend>
+            <h3 class="form__achievements-legend">Ваши безбашенные достижения в путешествии</h3>
             <div class="form__achievemnts-flex-box">
               <div class="form__achievemnts-flex form__achievemnts-flex-1">
                 <input class="visually-hidden form__achievements-input" type="checkbox" name="selfi" id="selfi"
@@ -129,7 +107,8 @@
 
         <div class="form__about-app-position">
           <fieldset class="form__about-app">
-            <legend class="form__about-app-legend">С каким приложением путешествовали?</legend>
+            <legend class="visually-hidden">С каким приложением путешествовали?</legend>
+            <h3 class="form__about-app-legend">С каким приложением путешествовали?</h3>
             <div class="form__about-app-flex-box">
               <input class="visually-hidden form__about-app-input" type="radio" name="app" checked="checked" id="ios"
                 value="ios">
@@ -148,8 +127,8 @@
 
         <div class="form__feedback-position">
           <fieldset class="form__feedback">
-            <legend class="form__feedback-legend">Контактная информация</legend>
-            <span class="visually-hidden">Контактная информация</span>
+            <legend class="visually-hidden">Контактная информация</legend>
+            <h3 class="form__feedback-legend">Контактная информация</h3>
             <div class="form__feedback-flex">
               <label class="form__feedback-label form__feedback-label-position-tell" for="tel">Номер телефона</label>
               <div class="form__feedback-tel">
@@ -169,7 +148,8 @@
 
         <div class="form__emotion-position">
           <fieldset class="form__emotion">
-            <legend class="form__emotion-legend">Опишите свои эмоции</legend>
+            <legend class="visually-hidden">Опишите свои эмоции</legend>
+            <h3 class="form__emotion-legend">Опишите свои эмоции</h3>
             <textarea class="form__emotion-text" rows="4" placeholder="Можно прям в красках, не стесняясь в выражениях"
               form="main-form"></textarea>
           </fieldset>
@@ -214,6 +194,30 @@
       </div>
     </div>
   </footer>
+
+  <section class="send-popup">
+    <h2 class="send-popup__heading">Ваша заявка
+      отправлена</h2>
+    <p class="send-popup__text">Спасибо за ваше участие, ваша
+      заявка уже поступила к нам. В
+      ближайшее время мы рассмотрим
+      ее и оповестим вас.</p>
+    <div class="send-popup__wrapper">
+      <button class="send-popup__btn" type="button">Закрыть окно</button>
+    </div>
+  </section>
+
+  <section class="oops-popup">
+    <h2 class="oops-popup__heading">
+      Что-то пошло не так!
+    </h2>
+    <p class="oops-popup__text">Проверьте поля, выделенные красным,
+      скорее всего вы забыли их заполнить
+    </p>
+    <div class="oops-popup__wrapper">
+      <button type="button" class="oops-popup__btn">Ок</button>
+    </div>
+  </section>
 </body>
 
 </html>
