--- a/source/form.html
+++ b/source/form.html
@@ -171,7 +171,7 @@
     <div class="container">
       <div class="footer__flex-box">
         <a href="#">
-          <img src="img/footer-logo.png" width="145" height="40" alt="Логотип Pink">
+          <img src="img/logotype-blue-tablet.svg" width="145" height="40" alt="Логотип Pink">
         </a>
         <ul class="footer__list">
           <li class="footer__item">
