--- a/source/index.html
+++ b/source/index.html
@@ -73,28 +73,19 @@
         <div class="container">
           <ul class="benefits__list">
             <li class="benefits__item">
-              <picture>
-                <source media="(min-width: 940px)" srcset="img/back-mob-1@2x.png 2x">
-                <img class="benefits__phone" src="img/back-mob-1.png" width="300" height="302">
-              </picture>
+                <img class="benefits__phone" srcset="img/back-mob-1@2x.png 2x" src="img/back-mob-1.png" width="300" height="302">
               <h3 class="benefits__item-heading">Поднимает настроение</h3>
               <p class="benefits__item-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
                 несколько кликов!</p>
             </li>
             <li class="benefits__item">
-              <picture>
-                <source media="(min-width: 940px)" srcset="img/back-mob-2@2x.png 2x">
-                <img class="benefits__phone" src="img/back-mob-2.png" width="300" height="302">
-              </picture>
+                <img class="benefits__phone" src="img/back-mob-2.png" srcset="img/back-mob-2@2x.png 2x" width="300" height="302">
               <h3 class="benefits__item-heading">Меняет мир вокруг</h3>
               <p class="benefits__item-text">Сделайте снимок и украсьте&nbsp;его смайликом или&nbsp;текстовой подписью,
                 чтобы&nbsp;усилить&nbsp;эффект</p>
             </li>
             <li class="benefits__item">
-              <picture>
-                <source media="(min-width: 940px)" srcset="img/back-mob-3@2x.png 2x">
-                <img class="benefits__phone" src="img/back-mob-3.png" width="300" height="302">
-              </picture>
+                <img class="benefits__phone" src="img/back-mob-3.png" srcset="img/back-mob-3@2x.png 2x" width="300" height="302">
               <h3 class="benefits__item-heading">Заводит новых&nbsp;друзей</h3>
               <p class="benefits__item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями
                 и&nbsp;заводите
