--- a/source/catalog.html
+++ b/source/catalog.html
@@ -149,7 +149,7 @@
       <div class="container">
         <div class="main-filter__flex-box">
           <picture>
-            <source media="(min-width: 660px)" srcset="img/filter-pic-tablet@2x.jpg">
+            <source media="(min-width: 660px)" srcset="img/filter-pic-tablet.jpg 1x, img/filter-pic-tablet@2x.jpg 2x">
             <img class="main-filter__pic" src="img/filter-pic.jpg" srcset="img/filter-pic-mob@2x.jpg"
               alt="Картинка для наложения фильтров" width="280" height="374">
           </picture>
